As a user I can log in and out
