# docs/swagger.yaml
@@ -44,6 +44,57 @@ paths:
                     error: Username already exists
           description: Username already exist
       summary: Registers a new user
+  /sessions:
+    post:
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/postSessionsRequest'
+        required: true
+      tags:
+        - sessions
+      responses:
+        '200':
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/postSessionsResponse'
+          description: User logged in successfully
+        '401':
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/errorResponse'
+              examples:
+                Invalid username/password:
+                  value:
+                    error: Invalid username/password
+                Invalid token:
+                  value:
+                    error: Invalid token
+          description: Invalid username/password
+      summary: Logs the user in
+    delete:
+      tags:
+        - sessions
+      responses:
+        '204':
+          description: User logged out successfully
+        '401':
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/errorResponse'
+              examples:
+                Missin Authorization header:
+                  value:
+                    error: Missing Authorization header
+                Invalid token:
+                  value:
+                    error: Invalid token
+          description: Unauthorized
+      summary: Logs the user out
 components:
   schemas:
     userObject:
@@ -124,7 +175,7 @@ components:
         currency: EUR
         number: erx896925e436c5f72a807f31e57439eb2d
     errorResponse:
-      title: Root Type for errorObject
+      title: errorResponse
       description: ''
       type: object
       properties:
@@ -132,3 +183,37 @@ components:
           type: string
       example:
         error: error message.
+    postSessionsRequest:
+      title: POST /sessions request
+      description: ''
+      type: object
+      properties:
+        username:
+          description: A valid username
+          type: string
+        password:
+          description: The password associated with given username
+          type: string
+      example:
+        username: sasuke
+        password: narutouzumaki
+    postSessionsResponse:
+      title: POST /sessions response
+      description: ''
+      type: object
+      properties:
+        token:
+          description: >-
+            A session token which needs to be sent back to the server in Authorization header with
+            every request (Authorization: Bearer <token>)
+          type: string
+      example:
+        token: 5f85c4c591c8bdc811c64023
+  securitySchemes:
+    Token:
+      scheme: bearer
+      type: http
+      description: A Bearer scheme
+security:
+  -
+    Token: []
